# eblearn

./: .cproject  .debug.el  .project  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.unix  README.eclipse  README.txt  build.sh  clean.sh  configure  configure.sh  configure_build.sh  debug.sh  todo.sh  todo.txt
demos/mnist/: CMakeLists.txt  mnist.conf
demos/mnist/src/: main.cpp  mnist_meta.conf  mnist_metaconf  reco.cpp  train.cpp
demos/objrec/: CMakeLists.txt
demos/objrec/face/: face_dsprepare.sh  face_meta.conf  face_metaconf
demos/objrec/hand/: hand_dsprepare.sh
demos/objrec/src/: detect.cpp  train.cpp
demos/pascal/: CMakeLists.txt  dsprepare.sh  pascal_meta.conf
demos/pascal/src/: detect.cpp  pascal_conf  pascal_dscompiler.sh  pascal_dsprepare.sh  pascal_dssplit.sh  pascal_metaconf  train.cpp
demos/posture/: CMakeLists.txt
demos/posture/src/: main.cpp
eblearn/gui/: CMakeLists.txt  REAMDE.txt
eblearn/gui/include/: RenderThread.h  RenderThread.hpp  Window.h  ebm_gui.h  libeblearn_gui.h
eblearn/gui/src/: RenderThread.cpp  Window.cpp  ebm_gui.cpp
eblearn/idxgui/: CMakeLists.txt
eblearn/idxgui/include/: GuiThread.h  RenderThread.h  Window.h  (+2 more)
libeblearn/: CMakeLists.txt  cmake_install.cmake
libeblearn/include/: Blas.h  Blas.hpp  Classifier2D.h  DataSource.h  DataSource.hpp  Defines.h  Ebl.h  EblArch.h  EblArch.hpp  EblBasic.h  EblCost.h  EblCost.hpp  EblLayers.h  EblLogger.h  EblMachines.h  EblMachines.hpp  EblNonLinearity.h  EblStates.h  EblTester.h  EblTrainer.h  EblTrainer.hpp  Ebm.h  Gbl.h  Gbm.h  Generators.hpp  Idx.h  Idx.hpp  IdxIO.h  IdxIO.hpp  IdxIterators.h  IdxIterators.hpp  Image.h  Ipp.h  Net.h  Trainer.h  Trainer.hpp  classifier2D.h  classifier2D.hpp  classifier_gen.h  classifier_gen.hpp  (+35 more)
libeblearn/src/: Blas.cpp  Classifier2D.cpp  DataSource.cpp  Defines.cpp  Ebl.cpp  EblArch.cpp  EblBasic.cpp  EblCost.cpp  EblLayers.cpp  EblLogger.cpp  EblMachines.cpp  EblNonLinearity.cpp  EblStates.cpp  EblTester.cpp  EblTrainer.cpp  Ebm.cpp  EbmTester.cpp  Gbl.cpp  Gbm.cpp  Image.cpp  Net.cpp  Trainer.cpp  classifier2D.cpp  classifier_gen.cpp  datasource.cpp  ebl_arch.cpp  ebl_basic.cpp  ebl_codec.cpp  ebl_cost.cpp  ebl_layers.cpp  ebl_logger.cpp  ebl_machines.cpp  ebl_nonlinearity.cpp  ebl_states.cpp  ebl_tester.cpp  ebl_utils.cpp  ipp.cpp  net_cscscfe.cpp  sdnn_modules.cpp
libeblearntools/: CMakeLists.txt
libeblearntools/include/: camera.h  camera.hpp  camera_directory.h  camera_directory.hpp  camera_opencv.hpp  camera_shmem.h  camera_shmem.hpp  camera_v4l2.h  camera_v4l2.hpp  camera_video.hpp  camera_windows.h  camera_windows.hpp  configuration.h  dataset.h  dataset.hpp  dataset_generation.h  detection_thread.h  detection_thread.hpp  gdb.h  grid_dataset.h  grid_dataset.hpp  libeblearntools.h  lush_dataset.h  lush_dataset.hpp  meta_jobs.h  metajobs.h  metaparser.h  netconf.h  netconf.hpp  opencv.h  pascal_dataset.h  pascal_dataset.hpp  pascalbg_dataset.h  pascalbg_dataset.hpp  pascalclear_dataset.hpp  pascalfull_dataset.hpp  pascalpart_dataset.hpp  patch_dataset.h  patch_dataset.hpp  similar_patches.h  (+8 more)
libeblearntools/src/: capture.cpp  configuration.cpp  dataset_compiler.cpp  dataset_display.cpp  dataset_generation.cpp  dscompiler.cpp  dsdisplay.cpp  dsmerge.cpp  dssplit.cpp  gdb.cpp  matdisplay.cpp  matshow.cpp  meta_jobs.cpp  meta_plot.sh  meta_trainer.cpp  metajobs.cpp  metaparse.cpp  metaparser.cpp  metarun.cpp  metatrain.sh  opencv.cpp  similar_patches.cpp  sort.cpp  thread.cpp  tools_utils.cpp  utils.cpp  video_features_finder.cpp  xml_utils.cpp
libidx/: CMakeLists.txt
libidx/include/: Blas.h  Blas.hpp  Idx.h  Idx.hpp  IdxBlas.h  IdxBlas.h.in  IdxIO.h  Image.h  Image.hpp  LibidxDefines.h  Numerics.h  Srg.h  blas.h  blas.hpp  color_spaces.h  color_spaces.hpp  config.h.in  defines.h  gaussian_pyramid.hpp  idx.h  idx.hpp  idxIO.h  idxIO.hpp  idx_iterators.h  idx_iterators.hpp  idxipp.h  idxipp.hpp  idxops.h  idxops.hpp  idxops_ipp.hpp  image.h  image.hpp  imageIO.h  imageIO.hpp  ipp.h  ipp.hpp  ippops.h  libidx.h  numerics.h  srg.h  (+2 more)
libidx/src/: Blas.cpp  Idx.cpp  Image.cpp  LibidxDefines.cpp  blas.cpp  color_spaces.cpp  idx.cpp  idxIO.cpp  idxipp.cpp  idxops.cpp  image.cpp  imageIO.cpp  ippops.cpp  libidx.cpp  numerics.cpp  srg.cpp  utils.cpp
libidxgui/: CMakeLists.txt
libidxgui/include/: RenderThread.h  RenderThread.hpp  gui.h  gui.hpp  gui_thread.h  idxgui.h  idxgui.hpp  libidxgui.h  scroll_box0.h  window.h
libidxgui/src/: gui.cpp  gui_thread.cpp  idxgui.cpp  scroll_box.cpp  window.cpp
tester/: CMakeLists.txt
tester/include/: Classifier2DTest.h  DataSourceTest.h  EblBasicTest.h  IdxIteratorsTest.h  NetTest.h  classifier2D_test.h  detector_test.h  ebl_basic_test.h  image_test.h
tester/src/: Classifier2DTest.cpp  ClusterTest.cpp  DataSourceTest.cpp  EblBasicTest.cpp  GblTest.cpp  IdxIteratorsTest.cpp  IdxTest.cpp  ImageTest.cpp  NetTest.cpp  classifier2D_test.cpp  datasource_test.cpp  detector_test.cpp  ebl_basic_test.cpp  ebl_machines_test.cpp  ebl_preprocessing_test.cpp  idxIO_test.cpp  idxops_test.cpp  idxops_test2.cpp  image_test.cpp  ippops_test.cpp  main.cpp
tester/timing/: go.sh
tools/libeblearntools/: CMakeLists.txt
trunk/: .debug.el  .svnignore  CMakeLists.txt  Makefile.unix  README.txt  build.sh  clean.sh  cmake_install.cmake  configure  configure_build.sh  debug.sh  todo.txt
trunk/core/: CMakeLists.txt  Makefile
trunk/demos/: CMakeLists.txt
trunk/doc/: download.html  download.shtml  guidelines.shtml  index.html  index.shtml  install.shtml  nav.html
trunk/eblearn/: CMakeLists.txt
trunk/libeblearn/: CMakeLists.txt  Makefile
trunk/libeblearngui/: CMakeLists.txt
trunk/libeblearntools/: CMakeLists.txt
trunk/libidx/: CMakeLists.txt
trunk/libidxgui/: CMakeLists.txt
trunk/libtools/: CMakeLists.txt
trunk/scripts/: FindAll.cmake  FindBoost.cmake  FindCBLAS.cmake  FindCPPUNIT.cmake  FindCustom.cmake  FindIPP.cmake  FindMagick++.cmake  FindOpenCV.cmake  FindQt4.cmake  FindQt4Fedora.cmake  FindXml++.cmake  Makefile.unix
trunk/tester/: CMakeLists.txt
trunk/tools/: CMakeLists.txt  Makefile
(+2837 files in other folders)
